@@ -10,6 +10,7 @@ News
 0.7 release (2007-??-??)
 
     * Development switched to subversion.
+    * Added support for CSV export.
 
 0.6 release (2007-01-06)
 
